--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "gallery",
     "version": "1.0.0",
+    "scripts": {"start": "node index.js"},
     "private": true,
     "dependencies": {
         "ejs": ">=2.5.5",
