--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
     "name": "gallery",
     "version": "1.0.0",
-    "scripts": {"start": "node app.js"},
+    "scripts": {
+        "start": "node app.js"
+    },
     "private": true,
     "dependencies": {
+        "body-parser": "^1.18.3",
         "ejs": ">=2.5.5",
         "express": "^4.16.4",
+        "formidable": "^1.2.1",
+        "fs-extra": "^7.0.1",
         "mongoose": "^5.3.12",
-        "body-parser": "^1.15.2"
+        "rename": "^1.0.4"
     }
 }
