--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "formidable": "^1.2.1",
         "fs-extra": "^7.0.1",
         "mongoose": "^5.3.12",
+        "mongoose-auto-increment": "^5.0.1",
         "rename": "^1.0.4",
         "sharp": "^0.21.3"
     }
