--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "body-parser": "^1.18.3",
         "ejs": ">=2.5.5",
         "express": "^4.16.4",
+        "express-session": "^1.15.6",
         "formidable": "^1.2.1",
         "fs-extra": "^7.0.1",
         "mongoose": "^5.3.12",
